Bug 412009 - SysTray Tooltip not updated
Summary: SysTray Tooltip not updated
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-18 05:41 UTC by Martin Koller
Modified: 2020-11-28 22:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2019-09-18 05:41:09 UTC
SUMMARY
When a song changes, the tooltip shown above the systray icon is showing the previous song.
It works when I manually switch to the next song or when I pause/play the current song.

STEPS TO REPRODUCE
play a song, check systray tooltip. Wait for the end of the song and the
next song starting. check tooltip again -> shows previous song title.

SOFTWARE/OS VERSIONS
KDE Frameworks 5.61.0
Qt 5.13.0 (built against 5.13.0)
The xcb windowing system
openSuse Leap 15.0

ADDITIONAL INFORMATION
This worked on some previous version
Comment 1 Patrick Silva 2020-01-30 00:42:18 UTC
Same thing with Juk 19.12.1 on Arch Linux.
Comment 2 Martin Koller 2020-11-28 22:18:39 UTC
Git commit f44e453e69982055592f64fd0b5a8d489dfd3f78 by Martin Koller.
Committed on 28/11/2020 at 22:15.
Pushed by mkoller into branch 'master'.

ensure systray tooltip updates on track change

M  +1    -0    playermanager.cpp

https://invent.kde.org/multimedia/juk/commit/f44e453e69982055592f64fd0b5a8d489dfd3f78
Comment 3 Martin Koller 2020-11-28 22:20:21 UTC
Git commit d2ca4cd54697dddbb8eabeaff380841a7850b8da by Martin Koller.
Committed on 28/11/2020 at 22:19.
Pushed by mkoller into branch 'release/20.12'.

ensure systray tooltip updates on track change
(cherry picked from commit f44e453e69982055592f64fd0b5a8d489dfd3f78)

M  +1    -0    playermanager.cpp

https://invent.kde.org/multimedia/juk/commit/d2ca4cd54697dddbb8eabeaff380841a7850b8da