ensure systray tooltip updates on track change

BUG: 412009
(cherry picked from commit f44e453e69982055592f64fd0b5a8d489dfd3f78)